--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@types/chai": "^4.0.1",
     "chai": "^4.1.0",
-    "typescript": "^2.4.2",
     "mocha": "^3.4.2",
-    "mocha-typescript": "^1.1.7"
-
+    "mocha-typescript": "^1.1.7",
+    "node-kmeans": "^1.1.0",
+    "tick": "^0.1.1",
+    "typescript": "^2.4.2"
+  },
+  "devDependencies": {
+    "@types/node": "^8.0.16"
   }
 }
